migrate facility booking to tsoa
