# src/dtos/facility.dto.ts
@@ -1,18 +1,28 @@
 export interface CreateFacilityBookingDto {
-    userGUID: string;
+    bookedBy: string;
     facilityId: string;
     startDate: string;
     endDate: string;
     numOfGuest: number;
 }
 
-export interface GetBookingHistoryDto { 
+export interface GetFacilityBookingHistoryDto { 
     bookingId: string
     startDate: string
     facilityId: string
     facilityName: string
     endDate: string
-    userGUID: string
+    bookedBy: string
     numOfGuest: number
     isCancelled: boolean
+    cancelRemark: string
+    createdBy: string;
+    createdDateTime: string;
+    updatedBy: string;
+    updatedDateTime: string;
+}
+
+export interface CancelFacilityBookingDto {
+    isCancelled: boolean,
+    cancelRemark: string
 }
